# mistcast

./: .gitignore  CONSTRAINTS.md  LICENSE  M-ARY.md  Makefile  PLAN.md  PROFILE.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.component.config.ts  vitest.config.ts
dsp/: BASELINE.md  Cargo.toml  plan.md
dsp/benches/: native_dsp.rs
dsp/eval/baselines/: 20260301T014829Z-160003d8_limits.csv  20260301T014829Z-160003d8_meta.json  20260301T014829Z-160003d8_metrics.csv  20260301T015420Z-fd3756bf_limits.csv  20260301T015420Z-fd3756bf_meta.json  20260301T015420Z-fd3756bf_metrics.csv  20260301T020930Z-93c6d340_limits.csv  20260301T020930Z-93c6d340_meta.json  20260301T020930Z-93c6d340_metrics.csv  baseline-160003d8_limits.csv  baseline-160003d8_meta.json  baseline-160003d8_metrics.csv  latest_metrics.csv
dsp/examples/: encode_wav.rs
dsp/src/: crc.rs  decoder.rs  demodulator.rs  encoder.rs  fec.rs  fountain.rs  interleaver.rs  lib.rs  modulator.rs  packet.rs  sync.rs
dsp/src/coding/: fec.rs  fountain.rs  interleaver.rs  mod.rs  scrambler.rs
dsp/src/common/: channel.rs  crc.rs  decimator.rs  equalization.rs  mod.rs  msequence.rs  nco.rs  resample.rs  rrc_filter.rs  walsh.rs  zadoff_chu.rs
dsp/src/dsss/: README.md  decoder.rs  demodulator.rs  encoder.rs  fsk.rs  mod.rs  modulator.rs  params.rs  sync.rs
dsp/src/frame/: packet.rs
dsp/src/mary/: decoder.rs  decoder_stats.rs  demodulator.rs  encoder.rs  equalization.rs  fountain_receiver.rs  integration_tests.rs  mod.rs  modulator.rs  packet_decoder.rs  params.rs  signal_pipeline.rs  sync.rs  tracking.rs
dsp/src/phy/: demodulator.rs  fsk.rs  mod.rs  modulator.rs  sync.rs
dsp/tests/: dsss_e2e_noise.rs  e2e_noise.rs  generate_waveform.rs  mary_e2e_noise.rs
src/: App.vue  (+10 more)
(+55 files in other folders)
