[package]
name = "dsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM向けにwasm-bindgenを将来追加予定
# wasm-bindgen = "0.2"

[dev-dependencies]
# WAVファイル出力 (テスト・デバッグ用)
hound = "3.5"
rand = "0.8"
rand_distr = "0.4"

[[example]]
name = "encode_wav"
path = "examples/encode_wav.rs"

[profile.release]
opt-level = 3
lto = true
