[package]
name = "dsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.1"
# CLI tools
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
csv = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# WAVファイル出力 (テスト・デバッグ用)
hound = "3.5"
wasm-bindgen-test = "0.3"

[[example]]
name = "encode_wav"
path = "examples/encode_wav.rs"

[profile.release]
opt-level = 3
lto = true
